--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div class="caixa-form">
         <img src="img/insta-logo (1).png" class="insta-logo">
         
-        <input placeholder="telefone,nome de usuario ou email">
+        <input placeholder="telefone,nome de usuario ou e-mail">
         <input placeholder="senha" type="password">
-        <button>entrar</button>
+        <button>Iniciar Sessão</button>
         <a class="login-facebook">entrar com facebook</a>
         <a class="esqueceu-senha">esqueceu a senha ?</a>
         <P>NÃO TEM UMA CONTA ?</P>
